从 accountinfoid 转化为 id

--- a/Pages/Identity/Edit.cshtml
+++ b/Pages/Identity/Edit.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AccountInfo.AccountInfoId" />
+            <input type="hidden" asp-for="AccountInfo.Id" />
             <div class="form-group">
                 <label asp-for="AccountInfo.Password" class="control-label"></label>
                 <input asp-for="AccountInfo.Password" class="form-control" />
