--- a/Pages/Identity/Details.cshtml
+++ b/Pages/Identity/Details.cshtml
@@ -26,6 +26,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.AccountInfo?.AccountInfoId">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.AccountInfo?.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
