--- a/Pages/Identity/Index.cshtml
+++ b/Pages/Identity/Index.cshtml
@@ -14,7 +14,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.AccountInfo[0].AccountInfoId)
+                @Html.DisplayNameFor(model => model.AccountInfo[0].Id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.AccountInfo[0].Password)
@@ -29,7 +29,7 @@
 @foreach (var item in Model.AccountInfo) {
         <tr>
             <td>
-                    @Html.DisplayFor(modelItem => item.AccountInfoId)
+                    @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Password)
@@ -38,9 +38,9 @@
                 @Html.DisplayFor(modelItem => item.Autority)
             </td>
             <td>
-                    <a asp-page="./Edit" asp-route-id="@item.AccountInfoId">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.AccountInfoId">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.AccountInfoId">Delete</a>
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
