--- a/Pages/Person/Create.cshtml
+++ b/Pages/Person/Create.cshtml
@@ -14,6 +14,11 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="PersonBasicInfo.Id" class="control-label"></label>
+                <input asp-for="PersonBasicInfo.Id" class="form-control" />
+                <span asp-validation-for="PersonBasicInfo.Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="PersonBasicInfo.Name" class="control-label"></label>
                 <input asp-for="PersonBasicInfo.Name" class="form-control" />
                 <span asp-validation-for="PersonBasicInfo.Name" class="text-danger"></span>
