--- a/Pages/Person/Index.cshtml
+++ b/Pages/Person/Index.cshtml
@@ -23,6 +23,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.PersonBasicInfo[0].Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.PersonBasicInfo[0].Name)
             </th>
             <th>
@@ -40,6 +43,9 @@
     <tbody>
 @foreach (var item in Model.PersonBasicInfo) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
