注释了pages index cs 中的logindata ??= new LoginMoDel(); 可正常登录了

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -28,8 +28,7 @@
                 <div>@Model.ErrorMessage</div>
             }
 
-        <button type="button" class="btn container btn-primary btn-block mb-4">登录</button>
-
+        <button type="submit" class="btn container btn-primary btn-block mb-4">登录</button>
     
     </form>
 </div>
