测试登录系统权限设置

--- a/Pages/Identity/Details.cshtml
+++ b/Pages/Identity/Details.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.AccountInfo.Password)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountInfo.Autority)
+            @Html.DisplayNameFor(model => model.AccountInfo.Authority)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AccountInfo.Autority)
+            @Html.DisplayFor(model => model.AccountInfo.Authority)
         </dd>
     </dl>
 </div>
