--- a/Pages/Identity/Edit.cshtml
+++ b/Pages/Identity/Edit.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="AccountInfo.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AccountInfo.Autority" class="control-label"></label>
-                <input asp-for="AccountInfo.Autority" class="form-control" />
-                <span asp-validation-for="AccountInfo.Autority" class="text-danger"></span>
+                <label asp-for="AccountInfo.Authority" class="control-label"></label>
+                <input asp-for="AccountInfo.Authority" class="form-control" />
+                <span asp-validation-for="AccountInfo.Authority" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
