--- a/Pages/Identity/Index.cshtml
+++ b/Pages/Identity/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.AccountInfo[0].Password)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AccountInfo[0].Autority)
+                @Html.DisplayNameFor(model => model.AccountInfo[0].Authority)
             </th>
             <th></th>
         </tr>
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Autority)
+                @Html.DisplayFor(modelItem => item.Authority)
             </td>
             <td>
                     <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
