--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Identity/Index">AccountInfo</a>
                         </li>
                         <li class="nav-item">
+                        <a class="button text-dark" asp-area="" asp-page="/Account/Login">登录</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
