测试登录登出功能，下一步计划全页面onget权限识别

--- a/Pages/Account/Logout.cshtml
+++ b/Pages/Account/Logout.cshtml
@@ -2,3 +2,7 @@
 @model HRsystem.Pages.Account.LogoutModel
 @{
 }
+<form method="post">
+
+<input type="submit" value="Confirm to Logout" />
+</form>
