--- a/Pages/Identity/Index.cshtml
+++ b/Pages/Identity/Index.cshtml
@@ -6,7 +6,9 @@
 }
 
 <h1>Index</h1>
-
+<h2>@Model.Infomation</h2>
+<br />
+<a href="/Account/Logout">Logout</a>
 <p>
     <a asp-page="Create">Create New</a>
 </p>
