在logout添加authorize标签

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Identity/Index">AccountInfo</a>
                         </li>
                         <li class="nav-item">
-                        <a class="button text-dark" asp-area="" asp-page="/Account/Login">登录</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Login">登入</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Logout">登出</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
