--- a/Pages/Person/Index.cshtml
+++ b/Pages/Person/Index.cshtml
@@ -12,7 +12,7 @@
 </p>
 <form>
     <p>
-        <select asp-for="PersonDepartment" asp-items="Model.Department">
+        <select asp-for="DepartmentId" asp-items="Model.Department">
             <option value="">All</option>
         </select>
         Name: <input type="text" asp-for="SearchString" />
