--- a/Pages/Person/Details.cshtml
+++ b/Pages/Person/Details.cshtml
@@ -17,18 +17,14 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PersonBasicInfo.Name)
         </dd>
+
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonBasicInfo.Department.Id)
+            @Html.DisplayNameFor(model => model.PersonBasicInfo.DepartmentId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PersonBasicInfo.Department.Id)
+            @Html.DisplayFor(model => model.PersonBasicInfo.DepartmentId)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonBasicInfo.Department.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PersonBasicInfo.Department.Name)
-        </dd>
+
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PersonBasicInfo.Sex)
         </dt>
