--- a/Pages/Person/Delete.cshtml
+++ b/Pages/Person/Delete.cshtml
@@ -19,16 +19,10 @@
             @Html.DisplayFor(model => model.PersonBasicInfo.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonBasicInfo.Department.Id)
+            @Html.DisplayNameFor(model => model.PersonBasicInfo.DepartmentId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PersonBasicInfo.Department.Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonBasicInfo.Department.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PersonBasicInfo.Department.Name)
+            @Html.DisplayFor(model => model.PersonBasicInfo.DepartmentId)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PersonBasicInfo.Sex)
