成功连接person与department

--- a/Pages/Person/Create.cshtml
+++ b/Pages/Person/Create.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="PersonBasicInfo.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PersonBasicInfo.Department" class="control-label"></label>
-                <input asp-for="PersonBasicInfo.Department" class="form-control" />
-                <span asp-validation-for="PersonBasicInfo.Department" class="text-danger"></span>
+                <label asp-for="PersonBasicInfo.DepartmentId" class="control-label"></label>
+                <input asp-for="PersonBasicInfo.DepartmentId" class="form-control" />
+                <span asp-validation-for="PersonBasicInfo.DepartmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PersonBasicInfo.Sex" class="control-label"></label>
