将filter从string 转换为int 唯一了但是可读较差

--- a/Pages/Person/Index.cshtml
+++ b/Pages/Person/Index.cshtml
@@ -12,7 +12,7 @@
 </p>
 <form>
     <p>
-        <select asp-for="InputId" asp-items="Model.Department">
+        <select asp-for="InputId" asp-items="Model.DepartmentList">
             <option value="">All</option>
         </select>
         Name: <input type="text" asp-for="SearchString" />
