修改命名空间

--- a/Pages/Person/Index.cshtml
+++ b/Pages/Person/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{searchString?}"
-@model HRsystem.Pages.AdminPersonUi.IndexModel
+@model HRsystem.Pages.Person.IndexModel
 
 @{
     ViewData["Title"] = "Index";
