--- a/Pages/Ui/AdminInfo.cshtml
+++ b/Pages/Ui/AdminInfo.cshtml
@@ -2,3 +2,13 @@
 @model HRsystem.Pages.Ui.AdminInfoModel
 @{
 }
+
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-page="/Person/Index">Person</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-page="/Salary/Index">Salary</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
+</li>
