--- a/Pages/Ui/Index.cshtml
+++ b/Pages/Ui/Index.cshtml
@@ -2,3 +2,15 @@
 @model HRsystem.Pages.Ui.IndexModel
 @{
 }
+
+
+
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-page="/Ui/SuperAdminInfo">SuperAdminInfoUi</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-page="/Ui/PersonInfo">PersonInfoUi</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-page="/Ui/AdminInfo">AdminInfoUi</a>
+</li>
