--- a/Pages/Ui/AdminInfo.cshtml
+++ b/Pages/Ui/AdminInfo.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
 @model HRsystem.Pages.Ui.AdminInfoModel
 @{
+    ViewData["Title"] = "AdminInfo Ui page";
 }
-
+<h4>AdminInfoUi</h4>
 <li class="nav-item">
     <a class="nav-link text-dark" asp-area="" asp-page="/Person/Index">Person</a>
 </li>
