--- a/Pages/Ui/Index.cshtml
+++ b/Pages/Ui/Index.cshtml
@@ -9,7 +9,7 @@
     <a class="nav-link text-dark" asp-area="" asp-page="/Ui/SuperAdminInfo">SuperAdminInfoUi</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-page="/Ui/PersonInfo">PersonInfoUi</a>
+    <a class="nav-link text-dark" asp-area="" asp-page="/Ui/PersonInfo">PersonInfo</a>
 </li>
 <li class="nav-item">
     <a class="nav-link text-dark" asp-area="" asp-page="/Ui/AdminInfo">AdminInfoUi</a>
