--- a/Pages/Ui/SuperAdminInfo.cshtml
+++ b/Pages/Ui/SuperAdminInfo.cshtml
@@ -3,16 +3,15 @@
 @{
     ViewData["Title"] = "SuperAdminInfo Ui page";
 }
+<h4>SuperAdminInfoUi</h4>
 
-<li class="nav-item">
     <a class="nav-link text-dark" asp-area="" asp-page="/Person/Index">Person</a>
-</li>
-<li class="nav-item">
+
+
     <a class="nav-link text-dark" asp-area="" asp-page="/Salary/Index">Salary</a>
-</li>
-<li class="nav-item">
+
+
     <a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
-</li>
-<li class="nav-item">
+
+
     <a class="nav-link text-dark" asp-area="" asp-page="/Identity/Index">AccountInfo</a>
-</li>
