完善验证和界面美观

--- a/Pages/Ui/PersonInfo.cshtml
+++ b/Pages/Ui/PersonInfo.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "PersonInfo Ui page";
 }
 @Model.ErrorMassage
-<div class="border container">
+<div class="border container-fluid ">
     <h4>PersonInfo</h4>
     <!---->
     <hr />
@@ -83,7 +83,7 @@
 
 </div>
 <br />
-<div class="border container">
+<div class="border container-fluid ">
     RewardingAndPunishmentInfo
     <table class="table">
         <thead>
@@ -157,4 +157,4 @@
             }
         </tbody>
     </table>
-</div>>
+</div>
