--- a/Pages/Ui/PersonInfo.cshtml
+++ b/Pages/Ui/PersonInfo.cshtml
@@ -114,7 +114,7 @@
                         @Html.DisplayFor(modelItem => item.Detail)
                     </td>
                     <td>
-                        <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-page="../RewardingAndPunishment/Details" asp-route-id="@item.Id">Details</a> |
                     <!--
                         <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                         <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
