--- a/Pages/Ui/AdminInfo.cshtml
+++ b/Pages/Ui/AdminInfo.cshtml
@@ -13,3 +13,7 @@
 <li class="nav-item">
     <a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
 </li>
+
+<a class="nav-link text-dark" asp-area="" asp-page="/Training/Index">Training</a>
+
+<a class="nav-link text-dark" asp-area="" asp-page="/RewardingAndPunishment/Index">RewardingAndPunishment</a>
