--- a/Pages/Ui/SuperAdminInfo.cshtml
+++ b/Pages/Ui/SuperAdminInfo.cshtml
@@ -5,13 +5,14 @@
 }
 <h4>SuperAdminInfoUi</h4>
 
-    <a class="nav-link text-dark" asp-area="" asp-page="/Person/Index">Person</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Person/Index">Person</a>
 
+<a class="nav-link text-dark" asp-area="" asp-page="/Salary/Index">Salary</a>
 
-    <a class="nav-link text-dark" asp-area="" asp-page="/Salary/Index">Salary</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
 
+<a class="nav-link text-dark" asp-area="" asp-page="/Identity/Index">AccountInfo</a>
 
-    <a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Training/Index">Training</a>
 
-
-    <a class="nav-link text-dark" asp-area="" asp-page="/Identity/Index">AccountInfo</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/RewardingAndPunishment/Index">RewardingAndPunishment</a>
