完成对于personinfo 中detail 仅限自己和管理员查看的功能

--- a/Pages/Ui/PersonInfo.cshtml
+++ b/Pages/Ui/PersonInfo.cshtml
@@ -35,6 +35,13 @@
             @Html.DisplayFor(model => model.PersonBasicInfo.Age)
         </dd>
     </dl>
+
+        <a asp-page="../Person/Details" asp-route-id="@Model.PersonBasicInfo.Id">Details</a> |
+                <!--
+            <a asp-page="./Edit" asp-route-id="@Model.PersonBasicInfo.Id">Edit</a> |
+                <a asp-page="./Delete" asp-route-id="@Model.PersonBasicInfo.Id">Delete</a>
+                -->
+            
     </div>
 
     <div>
