--- a/Pages/Account/Create.cshtml
+++ b/Pages/Account/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model HRsystem.Pages.Identity.CreateModel
+@model HRsystem.Pages.Account.CreateModel
 
 @{
     ViewData["Title"] = "Create";
