--- a/Pages/Account/Details.cshtml
+++ b/Pages/Account/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model HRsystem.Pages.Identity.DetailsModel
+@model HRsystem.Pages.Account.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
