--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Identity/Index">AccountInfo</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">AccountInfo</a>
                         </li>
 
                     </ul>
