--- a/Pages/Ui/SuperAdminInfo.cshtml
+++ b/Pages/Ui/SuperAdminInfo.cshtml
@@ -11,7 +11,7 @@
 
 <a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
 
-<a class="nav-link text-dark" asp-area="" asp-page="/Identity/Index">AccountInfo</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">AccountInfo</a>
 
 <a class="nav-link text-dark" asp-area="" asp-page="/Training/Index">Training</a>
 
