--- a/Pages/Account/Delete.cshtml
+++ b/Pages/Account/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model HRsystem.Pages.Identity.DeleteModel
+@model HRsystem.Pages.Account.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
