完成第一次命名空间约束，增加了logout的id识别，增加了layout导航栏目

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -35,10 +35,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Account/Logout">Logout</a>
                         </li>
+                        <!--
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        -->
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Person/Index">Person</a>
@@ -50,7 +52,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Department/Index">Department</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">AccountInfo</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Account/Index">Account</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RewardingAndPunishment/Index">RewardingAndPunishment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Training/Index">Training</a>
                         </li>
 
                     </ul>
