--- a/Pages/Ui/PersonInfo.cshtml
+++ b/Pages/Ui/PersonInfo.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "PersonInfo Ui page";
 }
+@Model.AuthorityMassage
 @Model.ErrorMassage
 <div class="border container-fluid ">
     <h4>PersonInfo</h4>
