--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,23 +4,23 @@
     ViewData["Title"] = "Home page";
 }
 
+    <!-- <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <!-- <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
 </div>
 
 <div class="w-50 container">
     <form method="post">
 
         <div class="form-outline mb-4 ">
-            <label class="form-label" asp-for="LoginData.Id">用户名:</label>
-            <input class="form-control" asp-for="LoginData.Id" value="" />
-            <span asp-validation-for="LoginData.Id"></span>
+            <label class="form-label" asp-for="Id">用户名:</label>
+            <input class="form-control" asp-for="Id" value="" />
+            <span asp-validation-for="Id"></span>
         </div>
         <div class="form-outline mb-4 ">
-            <label class="form-label" asp-for="LoginData.Password">密码:</label>
-            <input class="form-control" asp-for="LoginData.Password" type="password" />
-            <span asp-validation-for="LoginData.Password"></span>
+            <label class="form-label" asp-for="Password">密码:</label>
+            <input class="form-control" asp-for="Password" type="password" />
+            <span asp-validation-for="Password"></span>
         </div>
                
         @if (!string.IsNullOrEmpty(Model.ErrorMessage))
