--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -6,31 +6,25 @@
     <h1 class="display-4">Welcome</h1>
 </div>
 
-<!--
-
 <div class="w-50 container">
     <form method="post">
 
         <div class="form-outline mb-4 ">
-            <label class="form-label" asp-for="LoginData.Id">用户名:</label>
-            <input class="form-control" asp-for="LoginData.Id" value="" />
-            <span asp-validation-for="LoginData.Id"></span>
+            <label class="form-label" asp-for="Id">用户名:</label>
+            <input class="form-control" asp-for="Id" value="" />
+            <span asp-validation-for="Id"></span>
         </div>
         <div class="form-outline mb-4 ">
-            <label class="form-label" asp-for="LoginData.Password">密码:</label>
-            <input class="form-control" asp-for="LoginData.Password" type="password" />
-            <span asp-validation-for="LoginData.Password"></span>
+            <label class="form-label" asp-for="Password">密码:</label>
+            <input class="form-control" asp-for="Password" type="password" />
+            <span asp-validation-for="Password"></span>
         </div>
 
-        @*if (!string.IsNullOrEmpty(Model.ErrorMessage))
+        @if (!string.IsNullOrEmpty(Model.ErrorMessage))
         {
-
             <div class="alert-danger  w-50  container text-center">@Model.ErrorMessage</div>
-
-        }*@
-
+        }
         <br />
         <button type="submit" class="container  btn  btn-primary btn-block mb-4">登录</button>
     </form>
 </div>
--->
