--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Welcome</h1>
 </div>
 
-<div class="w-50 container">
+<div class="w-50 container border">
     <form method="post">
 
         <div class="form-outline mb-4 ">
