--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,13 +1,59 @@
 ﻿@page
 @model IndexModel
+@*import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css");*@
 @{
     ViewData["Title"] = "Home page";
 }
 
     <!-- <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+<div class="text-center ">
+    <h1 class="display-1 py-5">Welcome</h1>
+   </div>
+
+<div class="container-fluid border my-5">
+    <h1 class="display-1">Banner...</h1>
 </div>
+
+<div class="container text-center g-0 py-4 py-5 border border-5 ">
+    container
+    <div class="row my-5 ">
+        
+        <div class="col border ">
+            
+            <div class="container-fluid border">
+                <h1 class="display-1">Banner...</h1>
+            </div>
+            Column 1
+        </div>
+        <div class="col border ">
+            Column 2
+        </div>
+        <div class="col border ">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+        </div>
+    </div>
+
+    <div class="row my-5 ">
+        row
+        <div class="col border ">
+            <div class="container-fluid border">
+                <h1 class="display-1">Banner...</h1>
+            </div>
+            Column 1
+        </div>
+        <div class="col border ">
+            Column 2
+        </div>
+        <div class="col border ">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+        </div>
+    </div>
+
+</div>
+
+<div class="border p-5 my-5"><h1>H</h1></div>
 
 <!--
 
