--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -25,6 +25,9 @@
             <div class="alert-danger  w-50  container text-center">@Model.ErrorMessage</div>
         }
         <br />
+
+        <input type="checkbox" value="true" asp-for="rememberMe" /> 记住我
+
         <button type="submit" class="container  btn  btn-primary btn-block mb-4">登录</button>
     </form>
 </div>
