--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,13 +11,23 @@
     <h1 class="display-1 py-5">欢迎来到<span class="text-warning">企业人力资源管理系统</span></h1>
    </div>
 
-<div class="container-fluid my-5">
-    <h1 class="display-1">Banner...</h1>
+<div class="container">
+    <h1 class="display-1 text-warning">Banner...</h1>
     蕉砍虚深月颈灼恰缆稿尔骄拜志辑，史赫谊朗乔章冠振烃柴椰郑款恢铭石拆推斑阀晃馏渐乙车铲戴宙奔誓挤丈畜兄归萧坛现郡、氨塞楚粘纷能肥痢棚五户颚秆嚼意冯、抄瞅卫数熄教辣薯徐定睾具始受崭狮室鲜胡陷迅胞沾钠侯员柬裸哟鸡能贡饶绸衫机菱创佣综劈库逻伐浸拨翼傍尿磅萘姜挖邓篇叶馆聚理博样怒石珊鼎筒莲绩蚌喂盏挨镰有尔鹏氮量煎啃新宾崭路妄治小帮蕉笼肤涌案色滞甘考赞衔展动贩析私芬坏额胸硕祝霜嗯酶惧像爽骄镇坚戏邻览蒲受旋场凸！
+    
     </div>
 
 </section>
 
+
+
+
+
+<section>
+    
+</section>
+
+<!--
 <div class="container text-center g-0 py-4 py-5 border border-5 ">
     container
     <div class="row my-5 ">
@@ -59,3 +69,4 @@
 
 <div class="border p-5 my-5"><h1>H</h1></div>
 
+    -->
