--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,15 +4,15 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<section class="bg-light">
+<section class="bg-light p-3">
 
 
  <div class="text-center text-dark">
     <h1 class="display-1 py-5">欢迎来到<span class="text-warning">企业人力资源管理系统</span></h1>
    </div>
 
-<div class="container">
-    <h1 class="display-1 text-warning">Banner...</h1>
+<div class="container text-center text-sm-start">
+
     蕉砍虚深月颈灼恰缆稿尔骄拜志辑，史赫谊朗乔章冠振烃柴椰郑款恢铭石拆推斑阀晃馏渐乙车铲戴宙奔誓挤丈畜兄归萧坛现郡、氨塞楚粘纷能肥痢棚五户颚秆嚼意冯、抄瞅卫数熄教辣薯徐定睾具始受崭狮室鲜胡陷迅胞沾钠侯员柬裸哟鸡能贡饶绸衫机菱创佣综劈库逻伐浸拨翼傍尿磅萘姜挖邓篇叶馆聚理博样怒石珊鼎筒莲绩蚌喂盏挨镰有尔鹏氮量煎啃新宾崭路妄治小帮蕉笼肤涌案色滞甘考赞衔展动贩析私芬坏额胸硕祝霜嗯酶惧像爽骄镇坚戏邻览蒲受旋场凸！
     
     </div>
@@ -23,8 +23,25 @@
 
 
 
+<section class="p-5  text-dark bg-none">
+    <div class="container " >
+        <div class="d-flex text-center text-sm-start">
+
+            <div class="" ><!--display flex-->
+                <h1>如果没有登录系统，请先 <span class="text-primary">登录</span>系统 </h1>
+                <p class=" my-4">当你想要使用对应系统时，你需要登录对应的账号。</p>
+                <a asp-page="./Account/Login" class="btn btn-primary btn-lg ">跳转到登录界面</a>
+            </div>
+        <img src="~/img/showcase.svg" class=" ms-5 w-50 d-none d-lg-block" alt="">
+        </div>
+    </div>
+</section>
+
+
 <section>
-    
+    <div class="container">
+
+    </div>
 </section>
 
 <!--
