--- a/Pages/Account/AccessDenied.cshtml
+++ b/Pages/Account/AccessDenied.cshtml
@@ -2,4 +2,10 @@
 @model HRsystem.Pages.Account.AccessDeniedModel
 @{
 }
-AccessDenied
+<section class="p-5">
+
+<div class="containter bg-warning p-5 m-1">
+
+<p class="display-1 text-danger "> AccessDenied</p><p class="display-4 ">You Have No Right To Access This Page.</p>
+</div>
+</section>
