--- a/Pages/Account/Index.cshtml
+++ b/Pages/Account/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>AccountInfo</h1>
 <h2>@Model.Infomation</h2>
 <br />
 <a href="/Account/Logout">Logout</a>
