--- a/Pages/Salary/Index.cshtml
+++ b/Pages/Salary/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>SalaryInfo</h1>
 <h2>@Model.Infomation</h2>
 <p>
     <a asp-page="Create">Create New</a>
