--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -30,9 +30,10 @@
 
         <input type="checkbox" value="true" asp-for="rememberMe" /> 记住我
         <br />
-        <div class=" text-center ">
+        <div class="text-center ">
 
-        <button type="submit" class=" btn  btn-primary btn-block mb-4">登录</button>
+        <button type="submit" class=" btn  btn-primary btn-lg  ">登录</button>
+
         </div>
     </form>
 </div>
