--- a/Pages/Account/Logout.cshtml
+++ b/Pages/Account/Logout.cshtml
@@ -1,8 +1,12 @@
 ﻿@page
 @model HRsystem.Pages.Account.LogoutModel
 @{
+ViewData["Title"] = "Login Page";
 }
+<div class="text-center mt-5  bg-warning p-5">
+
 <form method="post">
-    <h2>@Model.Infomation</h2>
-<input type="submit" value="Confirm to Logout" />
+    <h2 class="display-1 text-black">@Model.Infomation</h2>
+<input class="btn btn-danger btn-lg" type="submit" value="Confirm to Logout" />
 </form>
+</div>
