--- a/Pages/Account/Register.cshtml
+++ b/Pages/Account/Register.cshtml
@@ -1,26 +1,51 @@
 ﻿@page
 @model HRsystem.Pages.Account.RegisterModel
 @{
+    ViewData["Title"] = "Register Page";
 }
-<h1>Register</h1>
-<div class="text-danger">
+<section>
+    <div class="container">
+
+    <h1 class="display-1">Register</h1>
+
+    <div class="text-danger">
 
     <h1>@Model.information</h1>
 
-</div>
-
-<div asp-validation-summary="All" class="text-danger"></div>
-
-<form method="post">
-    <div>
-        <label asp-for="inputID"></label>
-        <input asp-for="inputID" />
-        <span asp-validation-for="inputID"></span>
     </div>
-    <div>
-        <label asp-for="inputPassword"></label>
-        <input asp-for="inputPassword" />
-        <span asp-validation-for="inputPassword" class="text-danger"></span>
+
+        <div asp-validation-summary="All" class="text-danger"></div>
     </div>
-    <button type="submit">Register</button>
-</form>
+</section>
+
+<section class="bg-secondary text-light p-5">
+    <div class="container  ">
+        <div class="d-flex text-center text-sm-start" >
+            <div>
+
+            <form method="post">
+                    <!--
+                        -->
+                    <label asp-for="inputID" class="display-6" >ID</label>
+                    <div class="input-group">
+                    <input asp-for="inputID" class="form-control"/>
+                    <span asp-validation-for="inputID"></span>
+                    </div>
+
+                    <label asp-for="inputPassword" class="display-6">Password</label>
+                    <div class="input-group">
+                    <input asp-for="inputPassword" class="form-control" />
+                    <span asp-validation-for="inputPassword" class="text-danger"></span>
+                    </div>
+
+                <div class="text-center">
+                <button type="submit" class="btn btn-primary btn-lg m-3">Register</button>
+                </div>
+
+            </form>
+                </div>
+            <img src="~/img/2.svg" class=" ms-5 w-75 d-none d-sm-block" alt="">
+        </div>
+
+    </div>
+</section>
