--- a/Pages/Ui/Index.cshtml
+++ b/Pages/Ui/Index.cshtml
@@ -1,22 +1,23 @@
 ﻿@page
 @model HRsystem.Pages.Ui.IndexModel
 @{
+ViewData["Title"] = "UI Selecter Page";
 }
 
 
-<div class="d-lg-flex  container m-5  text-center">
+<div class="d-lg-flex container m-5  text-center">
 
-    <div class=" me-5">
+    <div class=" me-5 w-75">
     <a class="text-light mt-5   p-5  btn btn-primary "  asp-page="/Ui/SuperAdminInfo">SuperAdminInfoUi</a>
         <p class="display-6">超级管理员</p>
     </div>
 
-    <div class="me-5">
+    <div class="me-5 w-75">
     <a class="text-light mt-5  p-5 btn btn-primary " asp-page="/Ui/AdminInfo">AdminInfoUi</a>
         <p class="display-6">部门管理员</p>
     </div>
 
-    <div class="me-5 ">
+    <div class="me-5 w-75">
     <a class="text-light mt-5 p-5 btn btn-primary "  asp-page="/Ui/PersonInfo">PersonInfo</a>
         <p class="display-6">员工</p>
     </div>
